# solana-proofs

./: .gitignore  Cargo.toml  README.md  config.json
account_proof_geyser/: Cargo.toml  config.json
account_proof_geyser/src/: config.rs  lib.rs  types.rs  utils.rs
client/: Cargo.toml
client/src/: lib.rs  main.rs
onchain_programs/: Anchor.toml  package-lock.json
onchain_programs/programs/copy/: Cargo.toml
onchain_programs/programs/copy/src/: lib.rs
onchain_programs/tests/: copy.ts
